# SparseMapper

./: .gitignore  .gitmodules  LICENSE  README.md  adjSnippters.cpp  algo.cpp  hsrb4.urdf  takeshi_joints.json  vqCoyo
codebase/: adjacency_graph.cpp  codebase.cpp  space_seg.cpp  space_separation.cpp  space_separation.h
results/: Lloyd.py  aggregate.py  clustering  getStatistics.py  paths  (+6 more)
space_quantization/: CMakeLists.txt  CompatibilityNotes.txt  images  package.xml
space_quantization/graphs/: Coyotzi1.txt  bioroboticaII.txt  bioroboticaIIIKmeans.txt  byron1.txt  byron2.txt  takeshiBagPack1_voxel.txt
space_quantization/include/: cpuQuantization.h  pose_chck.h  preprocessing.h  quantization.h  space_seg.h  space_seg_cpu.h
space_quantization/launch/: biorobo_map.launch  graph_tester.launch  hsrb_sparse.launch  octomap_mapping.launch  oneshot_segmenter.launch  oneshot_stack.launch  oneshot_test_seg.launch  oneshot_voxel.launch  preprocessor.launch  segmenter_tester.launch
space_quantization/scripts/: tester.py
space_quantization/src/: pose_chck.cpp  pose_chck_node.cpp  preprocessing_node.cpp  quantization.cu  seg_node.cpp  space_seg.cpp
space_quantization/src/cpu/: cpuQuantization.cpp  operations.cpp  space_seg_cpu.cpp
space_quantization/src/gpu/: cpuQuantization.cu  operations.cu  quantization.cu  space_seg.cpp
space_quantization/statictf/: EdgarCompu1.tf  byron.tf  byron2.tf  jaime.tf
sparse_map_utils/: CMakeLists.txt  clouds  graphsPDSFull3.pcd  maps
sparse_map_utils/launch/: montecarlo.launch  montecarloTest.launch  octomap_projector.launch  pathRequester.launch  pathServer.launch  pathSimulation.launch
sparse_map_utils/launch/configs/: bioroboticaV.yaml
sparse_map_utils/results/: d-1295527104.022905-2364153130-kmeansCPU.csv  d-1295527253.447308-2739868628-LBG.csv
src/mapping/hearts_head/: CMakeLists.txt  package.xml
src/mapping/hearts_head/src/: head_pose_srv.cpp  loop_pose_cli.cpp  single_pose_cli.cpp
src/mapping/hearts_robot_pose/: CMakeLists.txt  package.xml
src/mapping/hearts_robot_pose/src/: mapping_pose_cli.cpp  mapping_pose_srv.cpp
src/mapping/hearts_tools/: CMakeLists.txt  hearts_pov_conf.yaml  hearts_pov_conf.yaml~  package.xml
src/mapping/hearts_tools/include/hearts_tools/: linefinder.h  transformations.h
src/mapping/hearts_tools/src/: linefinder.cpp  lineransac.cpp  transformations.cpp
src/mapping/hearts_top_map/: CMakeLists.txt  package.xml
src/mapping/hearts_top_map/src/: top_map_cli.cpp  top_map_srv.cpp  top_pov2map_cli.cpp  top_pov2map_srv.cpp
src/mapping/hearts_top_pov/: CMakeLists.txt  package.xml
src/mapping/hearts_top_pov/src/: top_pov_cli.cpp  top_pov_lis.cpp  top_pov_node.cpp  top_pov_srv.cpp
src/mapping/hearts_xtion/: CMakeLists.txt  package.xml
src/mapping/hearts_xtion/src/: xtion_src_node.cpp
src/quantization_utilities/: CMakeLists.txt  package.xml
src/quantization_utilities/include/quantization_utilities/: tf_reader.h  tf_saver.h
src/quantization_utilities/launch/: tf_reader.launch  tf_saver.launch
src/quantization_utilities/src/: tf_reader.cpp  tf_reader_node.cpp  tf_saver.cpp  tf_saver_node.cpp
src/quantization_utilities/tf/: test2.txt  text.txt
src/space_quantization/: CMakeLists.txt  bags  package.xml
src/space_quantization/graphs/: apt.txt  bioroboticaIII.txt  bioroboticaIIILBG.txt  bioroboticaIV.txt  sparse_map.txt  takeshiBagPack1.txt  takeshiBagPack1_voxel.txt  wrs2018-2.txt  wrs2018-LBG.txt  wrs2018.txt  wrs2018Kmeans.txt
src/space_quantization/include/: adjacency_graph.h  pose_chck.h  preprocessing.h  quantization.h  space_seg.h  space_separation.h
src/space_quantization/include/utilities/: Cylinder.h
src/space_quantization/launch/: cloudReader.launch  hsrb_locator.launch  hsrb_sparse.launch  octomap_hsrb.launch  octomap_mapping.launch  oneshot_segmenter.launch  oneshot_stack.launch  oneshot_test.launch  oneshot_test_seg.launch  pcl_recorder.launch  preprocessor.launch  space_segmenter.launch  sparse_mapper.launch
src/space_quantization/msg/: quantizedSpace.msg
src/space_quantization/src/: Cylinder.cpp  adjacency_graph.cpp  adjacency_graph_node.cpp  codebase.cpp  cpuQuantization.cu  operations.cu  pose_chck.cpp  preprocessing.cpp  preprocessing_node.cpp  quantization.cu  space_seg.cpp  space_separation.cpp  space_separation_node.cpp  space_separation_voxel_node.cpp
src/space_quantization/statictf/: AdrianClutter.tf  CoboB.tf  CoyoC.tf  CoyoI.tf  Coyotzi.tf  robotino.tf  tinyTransformer.tf
src/space_quantization/test/: colortest.cpp
src/sparse_map_server/: CMakeLists.txt  package.xml
src/sparse_map_server/graphs/: PDS.txt
src/sparse_map_server/include/sparse_map_server/: adjacencyMap.h  sparse_map_editor.h  sparse_map_server.h  types.h
src/sparse_map_server/launch/: map_editor.launch  map_server.launch
src/sparse_map_server/scripts/: publishGoal.py  publishGoalDouble.py
src/sparse_map_server/src/: sparse_map_editor.cpp  sparse_map_server.cpp
src/sparse_map_server/src/adjacencyMap/: adjacencyMap.cpp  graphIO.cpp  voxelGrid.cpp
src/sparse_map_utils/: CMakeLists.txt  graphs  package.xml
src/sparse_map_utils/include/sparse_map_utils/: cloudSimulation.h  pclGenerator.h
src/sparse_map_utils/launch/: montecarlo.launch  montecarloTest.launch  pathRequester.launch  pathServer.launch  pathSimulation.launch
src/sparse_map_utils/results/: bedroom-inner.csv  bedroom-kmeansCPU.csv  bedroom-uniform.csv  d-1295527104.022905-2364153130-LBG.csv  nyuCaffekpp.csv  panoxyz20d20inner.csv  panoxyz20d20kpp.csv  panoxyz20d20uniform.csv  paths  results.csv  rgbdkpp.csv  run1.csv  wrs2018-inner.csv  wrs2018-uniform.csv  wrs2018inner.csv  wrs2018kpp.csv
src/sparse_map_utils/scripts/: pathSimulation.py
src/sparse_map_utils/src/: cloudSimulation.cpp  cloudSimulation_node.cpp  pclGenerator.cpp
src/sparse_mappper/: CMakeLists.txt  package.xml
src/sparse_mappper/include/sparse_mapper/: sparse_mapper.h
src/sparse_mappper/src/: sparse_mapper.cpp
utils/randGen/: CMakeLists.txt  gaussianCloud.cpp  uniformCloud.cpp
utils/toPCD/: CMakeLists.txt  pcdConverter.cpp
(+203 files in other folders)
