<?xml version="1.0"?>
<package>
  <name>hearts_head_pose</name>
  <version>0.0.0</version>
  <description>Set head pose</description>

  <maintainer email="cslact@my.bristol.ac.uk">Luis Tenshi</maintainer>
  <maintainer email= "thekla.stefanou@bristol.ac.uk">Thekla Stefanou</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hearts_nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
 
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>hearts_nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
